fixed about us misalignment

--- a/client/src/scss/components/_about.scss
+++ b/client/src/scss/components/_about.scss
@@ -67,19 +67,13 @@
 }
 
 .show-more {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  column-gap: 1rem;
+  display: flex;
   font-size: 1.25rem;
-  grid-column: 1/3;
-  justify-items: center;
   margin: 0 auto;
-  max-width: 15rem;
+  justify-content: center;
   &__text {
     align-self: center;
-    @media screen and (max-width: $extremely-small-width) {
-      justify-self: left;
-    }
+    margin-right: 1rem;
   }
   &__icon {
     max-width: 1.5rem;
